--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 :root{
   background-color: gray; 
-  
+  background-image: url('./quiztime.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 .App {
   font-family: 'Oxanium', cursive;
